@@ -3,5 +3,5 @@ glibc-branch := fedora
 glibc-base := HEAD
 DIST_BRANCH := devel
 COLLECTION := dist-fc4
-fedora-sync-date := 2006-04-24 20:27 UTC
-fedora-sync-tag := fedora-glibc-20060424T2027
+fedora-sync-date := 2006-04-25 09:03 UTC
+fedora-sync-tag := fedora-glibc-20060425T0903
